fix xml hierachy on index.html. fix z-index on menu & content divs

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
 	top: 60px;
 	left: 10px;
 	width: 185px;
+	z-index: 1;
 }
 #mysidebar ul {
 	border: line;
@@ -81,7 +82,6 @@ body {
 	left: 25px;
 	width: 950px;
 	height: 500px;
-	z-index: -1;
 }
 
 img.mainpage{
